static/css/stears.css
html{
  
}

body{
  background: url('/static/images/stears/naira7.jpg') no-repeat fixed;

}

.blur{
  background-color:rgba(255,255,255,0.7);
  margin-top:-20px;
  position:fixed;

  height:120%;
  width: 120%;
  
}

.cancel_button{
  background-color:#FF4747;
}

.a_indicator{
  background-color: green;
  display:inline-block;
  padding-left:20px;
  height:20px;
  width:20px;
  border-radius:10px;
}

.b_indicator{
  background-color: orange;
  display:inline-block;
  padding-left:20px;
  height:20px;
  width:20px;
  border-radius:10px;
}

.c_indicator{
  background-color: red;
  display:inline-block;
  padding-left:20px;
  height:20px;
  width:20px;
  border-radius:10px;
}

.stears_bannerh{
  background-color: rgba(0,0,0,0.3);
  color:white;
  padding:15px;
  padding-top:5px;
  padding-bottom:5px;
  font-size: 30px;
}

.stears_bannerg{
/*  background-color: rgba(0,0,0,0.3);
  color:black;
  padding:15px;*/
}

.stears_bannerm{
  background-color: rgba(0,0,0,0.3);
  color:white;
  padding-left:15px;
  font-size: 20px;
}

*{
  font-family: "Lato";
  font-size: 15px;
}

h1,h2,h3,h4,h5,h6{
  font-family: "Lato";
}

.fill {
width:100%;
margin-left: auto;
margin-right: auto;
max-width: initial;
}

.tooltip {
  /*display:none;*/
  /*position:absolute;*/
  border:1px solid #333;
  background-color:black;
  border-radius:5px;
  padding:10px;
  color:white;
  font-size:12px "Lato";
}

.small_textarea{
  max-height: 100px;
}

.tiny_textarea{
  border-radius: 10px;
  max-height: 60px;
}

.nav_extra{
  background-color: #efefef;
  border-bottom-left-radius:8px;
  border-bottom-right-radius:8px;
  padding-left: 10px;
  padding-right: 10px;
}

top-bar-section .has-form {
      background-color:#FF4747;
      padding: 0 15px;
      height: 45px; }

.keyword{
  background-color: white;
  display:inline-block;
  border-radius:2px;
  padding: 8px;
  color: black;

  -moz-box-shadow:    0px 0px 2px  #ccc;
  -webkit-box-shadow: 0px 0px 2px  #ccc;
  box-shadow:         0px 0px 5px  #ccc;
}

.tag_wrapper {
    position: relative;
    display: inline-block;
}

.tag_wrapper :hover{
  box-shadow:         0px 0px 5px  #000;
  font-size: 20px;
}




/*
button{
  background-color:white;
  border-radius: 20px;
  color:blue;
    padding:15px;
  -moz-box-shadow:    0px 0px 5px  #ccc;
  -webkit-box-shadow: 0px 0px 5px  #ccc;
  box-shadow:         0px 0px 5px 2px #ccc;
}*/

button{
background-color:#060664;
max-height: 40px;
max-width: 100px;
text-align: center;
border-radius: 3px;
padding: 10px;
}

button:focus{
  background-color:black;
}

.button2{
  padding:8px;
  border-radius: 3px;
}


button:hover{
  background-color:black;
    -moz-box-shadow:    inset 0 0 5px #000000;
   -webkit-box-shadow: inset 0 0 5px #000000;
   box-shadow:         inset 0 0 6px #000000;
}

.wym_skin_default .wym_html textarea      {  height: 500px;  }
.wym_skin_default .wym_iframe iframe      { height: 500px;  }

.section1{
	background-color: white;
	border-radius: 3px;
}

.article_box{
  background-color:rgba(255,255,255,0.8);
  padding:5px;
}

.top_write_button:hover{
  background-color:#f0fbff
  
    -moz-box-shadow:   inset 0 0 2px #000000;
   -webkit-box-shadow: inset 0 0 2px #000000;
   box-shadow:         inset 0 0 3px #000000;
}

.home_box{
  background-color:white;
  padding:20px;
}

.login_box{
  background-color:rgba(255,255,255,0.8);
  padding:20px;
}

.login_page{
  background: url('/static/images/stears/naira7.jpg');
  background-size: 100%;
  opacity:0.99;
  min-height:100%;
}


.in-shadow {
   -moz-box-shadow:    inset 0 0 5px #000000;
   -webkit-box-shadow: inset 0 0 5px #000000;
   box-shadow:         inset 0 0 6px #000000;
}

.out-shadow {
  -moz-box-shadow:    3px 3px 4px 4px #000;
  -webkit-box-shadow: 3px 3px 4px 4px #000;
  box-shadow:         3px 3px 4px 4px #000;
}

.article_options{
  padding:25px;
}

.article_closed{
  box-shadow:         0px 0px 5px 1px #030;

  border-radius: 5px;
  color:black;
  background-color: #efefef;
  min-height:40px;
  height: relative;
  padding:15px;
  padding-left:20px;
  font-size: 20px;

}


.shadowbox{
    border-radius: 10px;
}

.shadowbox:hover{
    -moz-box-shadow:    inset 0 0 5px #000000;
   -webkit-box-shadow: inset 0 0 5px #000000;
   box-shadow:         inset 0 0 6px #000000;
}

